[tool.poetry]
authors     = ["Eric Busto <ebusto@nvidia.com>"]
description = "Publish changes to a message broker"
name        = "nautobot-change-producer"
packages    = [{include = "nautobot_change_producer"}]
readme      = "README.md"
version     = "1.0.0"

[tool.poetry.dependencies]
dictdiffer   = "^0.9.0"
kafka-python = "^2.0.2"
nats-py      = "^2.3.0"
nkeys        = "^0.1.0"
orjson       = "^3.9.1"
python       = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
