[tool.poetry]
authors     = ["Eric Busto <ebusto@nvidia.com>"]
description = "Publish changes to a message broker"
name        = "nautobot-change-producer"
packages    = [{include = "nautobot_change_producer"}]
readme      = "README.md"
version     = "1.2.0"

[tool.poetry.dependencies]
dictdiffer = "^0.9.0"
nats-py    = "^2.3.1"
nkeys      = "^0.1.0"
orjson     = "^3.9.2"
python     = "^3.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
